--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,7 @@ test:
   database: homeless-app_test
 
 production:
-  <<: *default
-  database: homeless-app_production
-  username: homeless-app
-  password: <%= ENV['HOMELESS-APP_DATABASE_PASSWORD'] %>
+  adapter: mysql2
+  encoding: utf8
+  pool: 5
+  host: <%= ENV['DATABASE_URL'] %>
